<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/fragment_main_home_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment_main_box"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/main_box_bg_color">

            <com.readboy.mobile.dictionary.view.RippleView
                android:id="@+id/fragment_main_rippleview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                ripple:alphaFactor="0.7"
                ripple:rippleColor="@color/white" />

            <FrameLayout
                android:id="@+id/fragment_main_ripple_target"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:background="@drawable/fragment_main_search_button_bg">

                <TextView
                    android:id="@+id/fragment_main_search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_search"
                    android:clickable="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="25dp"
                    android:text="@string/scan_word"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/fragment_main_title_margin_top"
                android:text="@string/mobile_app_name"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/fragment_main_text_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_search"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/fragment_main_voice_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voice_search"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:visibility="gone" />

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fragment_main_record"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_left_line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fragment_main_text_1_end"
                    android:layout_marginStart="@dimen/fragment_main_text_1_start"
                    android:text="@string/title_summary"
                    android:textColor="@color/dark_blue_2"
                    android:textSize="@dimen/fragment_main_text_size_1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_right_line" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>


</FrameLayout>